--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -1,8 +1,7 @@
 ---
 title: Getting Started
+description: Starlight theme inspired by Shadcn docs
 ---
-
-Starlight theme inspired by Shadcn docs
 
 ## Prerequisites
 
