feat: add Hero component override and update layout structure

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -18,13 +18,20 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components'
 
-## Next steps
+<div class="container-section">
+  <div class="container-wrapper">
+    <div class="container">
 
-<CardGrid stagger>
-  <Card title="Install the plugin" icon="puzzle">
-    Check the [getting started guide](/getting-started/) for installation instructions.
-  </Card>
-  <Card title="Configure the plugin" icon="setting">
-    Edit your config in the `astro.config.mjs` file.
-  </Card>
-</CardGrid>
+      ## Next steps
+
+      <CardGrid stagger>
+        <Card title="Install the plugin" icon="puzzle">
+          Check the [getting started guide](/getting-started/) for installation instructions.
+        </Card>
+        <Card title="Configure the plugin" icon="setting">
+          Edit your config in the `astro.config.mjs` file.
+        </Card>
+      </CardGrid>
+    </div>
+  </div>
+</div>
