feat: add ContainerSection component

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -18,20 +18,19 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components'
 
-<div class="container-section">
-  <div class="container-wrapper">
-    <div class="container">
+import { ContainerSection } from 'starlight-theme-black/components'
 
-      ## Next steps
+<ContainerSection>
 
-      <CardGrid stagger>
-        <Card title="Install the plugin" icon="puzzle">
-          Check the [getting started guide](/getting-started/) for installation instructions.
-        </Card>
-        <Card title="Configure the plugin" icon="setting">
-          Edit your config in the `astro.config.mjs` file.
-        </Card>
-      </CardGrid>
-    </div>
-  </div>
-</div>
+## Next steps
+
+<CardGrid stagger>
+  <Card title="Install the plugin" icon="puzzle">
+    Check the [getting started guide](/getting-started/) for installation instructions.
+  </Card>
+  <Card title="Configure the plugin" icon="setting">
+    Edit your config in the `astro.config.mjs` file.
+  </Card>
+</CardGrid>
+
+</ContainerSection>
