feat: update installation commands to include additional font packages
fix: #2

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -21,7 +21,7 @@ import { Steps, Tabs, TabItem } from '@astrojs/starlight/components'
    <TabItem label="npm">
 
    ```sh
-   npm install starlight-theme-black
+   npm install starlight-theme-black @fontsource/geist-mono @fontsource/geist-sans
    ```
 
    </TabItem>
@@ -29,7 +29,7 @@ import { Steps, Tabs, TabItem } from '@astrojs/starlight/components'
    <TabItem label="pnpm">
 
    ```sh
-   pnpm add starlight-theme-black
+   pnpm add starlight-theme-black @fontsource/geist-mono @fontsource/geist-sans
    ```
 
    </TabItem>
@@ -37,7 +37,7 @@ import { Steps, Tabs, TabItem } from '@astrojs/starlight/components'
    <TabItem label="Yarn">
 
    ```sh
-   yarn add starlight-theme-black
+   yarn add starlight-theme-black @fontsource/geist-mono @fontsource/geist-sans
    ```
 
    </TabItem>
